--- a/PayMe/PayMe/Views/Client/ClientCreate.cshtml
+++ b/PayMe/PayMe/Views/Client/ClientCreate.cshtml
@@ -81,7 +81,7 @@
                         <div class="col-lg-4">
 
                             <input type="submit" value="Create Client" class="btn btn-md btn-primary" />
-                            @Html.ActionLink("Cancel", "Index", "Client", null, new { @class = "btn btn-md btn-primary" })
+                            @Html.ActionLink("Cancel", "/Index", "Client", null, new { @class = "btn btn-md btn-primary" })
 
 
 
