--- a/PayMe/PayMe/Views/EmployeeProject/Create.cshtml
+++ b/PayMe/PayMe/Views/EmployeeProject/Create.cshtml
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <input type="submit" value="Create" class="btn btn-md btn-primary" />
-                    @Html.ActionLink("Cancel", "Index", "EmployeeProject", null, new { @class = "btn btn-md btn-primary" })
+                    @Html.ActionLink("Cancel", "/Index", "EmployeeProject", null, new { @class = "btn btn-md btn-primary" })
 
                 </div>
             </div>
