--- a/PayMe/PayMe/Views/Tasks/Create.cshtml
+++ b/PayMe/PayMe/Views/Tasks/Create.cshtml
@@ -61,7 +61,7 @@
                 <div class="col-lg-4">
                     <input type="submit" id="create" value="Create" class="btn btn-md btn-primary" />
                     <input type="submit" id="update" value="Update Value" onclick="return update()" class="btn btn-md btn-primary" />
-                    @Html.ActionLink("Cancel", "Index", "Tasks", null, new { @class = "btn btn-md btn-primary" })
+                    @Html.ActionLink("Cancel", "/Index", "Tasks", null, new { @class = "btn btn-md btn-primary" })
 
                 </div>
             </div>
