--- a/PayMe/PayMe/Views/Client/Create.cshtml
+++ b/PayMe/PayMe/Views/Client/Create.cshtml
@@ -84,7 +84,7 @@
 
                         <input type="submit" id="create" value="Create" class="btn btn-md btn-primary" />
                         <input type="submit" id="update" value="Update" class="btn btn-md btn-primary" />
-                        @Html.ActionLink("Cancel", "Index", "Client", null, new { @class = "btn btn-md btn-primary" })
+                        @Html.ActionLink("Cancel", "/Index", "Client", null, new { @class = "btn btn-md btn-primary" })
 
 
 
@@ -125,7 +125,7 @@
 
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "/Index")
 </div>
 <script type="text/javascript">
 
