--- a/PayMe/PayMe/Views/EmployeePayRate/AddPayRate.cshtml
+++ b/PayMe/PayMe/Views/EmployeePayRate/AddPayRate.cshtml
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <input type="submit" value="Create" class="btn btn-md btn-primary" />
-                    @Html.ActionLink("Cancel", "Index", "Employee", null, new { @class = "btn btn-md btn-primary" })
+                    @Html.ActionLink("Cancel", "/Index", "Employee", null, new { @class = "btn btn-md btn-primary" })
 
                 </div>
             </div>
