--- a/PayMe/PayMe/Views/Expense/Create.cshtml
+++ b/PayMe/PayMe/Views/Expense/Create.cshtml
@@ -83,7 +83,7 @@
                 <div class="col-lg-4">
 
                     <input type="submit" value="Create" class="btn btn-md btn-primary" />
-                    @Html.ActionLink("Cancel", "Index", "Expense", null, new { @class = "btn btn-md btn-primary" })
+                    @Html.ActionLink("Cancel", "/Index", "Expense", null, new { @class = "btn btn-md btn-primary" })
 
 
 
@@ -96,7 +96,7 @@
 
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "/Index")
 </div>
 <script type="text/javascript">
 
