--- a/PayMe/PayMe/Views/Expense/Detail.cshtml
+++ b/PayMe/PayMe/Views/Expense/Detail.cshtml
@@ -157,7 +157,7 @@
 </div>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "/Index")
 </div>
 <script src="https://momentjs.com/downloads/moment.min.js"></script>
 <script type="text/javascript">
