--- a/PayMe/PayMe/Views/Project/Create.cshtml
+++ b/PayMe/PayMe/Views/Project/Create.cshtml
@@ -90,7 +90,7 @@
 
                         <input type="submit" id="create" value="Create" class="btn btn-md btn-primary" />
                         <input type="submit" id="update" value="Update"  class="btn btn-md btn-primary" />
-                        @Html.ActionLink("Cancel", "Index", "Project", null, new { @class = "btn btn-md btn-primary" })
+                        @Html.ActionLink("Cancel", "/Index", "Project", null, new { @class = "btn btn-md btn-primary" })
 
 
 
