--- a/PayMe/PayMe/Views/Timesheet/Index.cshtml
+++ b/PayMe/PayMe/Views/Timesheet/Index.cshtml
@@ -142,20 +142,16 @@
                changeYear: true,
                yearRange: "-100:+100"
            });
-        $("#CheckInDateTime").datepicker
+        $("#CheckInDateTime").datetimepicker
            ({
-               dateFormat: "yy-mm-dd",
-               changeMonth: true,
-               changeYear: true,
-               yearRange: "-100:+100"
+               format: "dd MM yyyy - hh:ii",
+             
            });
 
-        $("#CheckOutDatetime").datepicker
+        $("#CheckOutDatetime").datetimepicker
            ({
-               dateFormat: "yy-mm-dd",
-               changeMonth: true,
-               changeYear: true,
-               yearRange: "-100:+100"
+               format: "dd MM yyyy - hh:ii",
+               
            });
 
 
