--- a/PayMe/PayMe/Views/Client/Index.cshtml
+++ b/PayMe/PayMe/Views/Client/Index.cshtml
@@ -41,7 +41,7 @@
     </ol>
 </div>
 
-<div style="float:right;"><a href="~/Client/Create" class="btn btn-md btn-primary">Create</a></div>
+<div style="float:left;"><a href="~/Client/Create" class="btn btn-md btn-primary">Create</a></div>
 
 <div  class="row">
     <div class="col-lg-12">
