--- a/PayMe/PayMe/Views/Employee/Index.cshtml
+++ b/PayMe/PayMe/Views/Employee/Index.cshtml
@@ -30,7 +30,7 @@
     </ol>
 </div>
 
-<div style="float:right;"><a href="~/Employee/Register" class="btn btn-md btn-primary">Register</a></div>
+<div style="float:left;"><a href="~/Employee/Register" class="btn btn-md btn-primary">Create</a></div>
 
 <div class="row">
     <div class="col-lg-12">
