--- a/PayMe/PayMe/Views/Timesheet/Index.cshtml
+++ b/PayMe/PayMe/Views/Timesheet/Index.cshtml
@@ -29,22 +29,22 @@
             <div class="row">
                 <div class="col-lg-2">
                     @Html.LabelFor(model => model.fkEmpId, htmlAttributes: new { @class = "control-label manadatory" })
-                    @Html.DropDownList("EmployeeID", ViewBag.Employee as SelectList, "--Please select--", new { @class = "form-control input-lg" })
+                    @Html.DropDownList("fkEmpId", ViewBag.Employee as SelectList, "--Please select--", new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.fkEmpId, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-2">
                     @Html.LabelFor(model => model.fkClientId, htmlAttributes: new { @class = "control-label manadatory" })
-                    @Html.DropDownList("ClientID", ViewBag.Client as SelectList, "--Please select--", new { @class = "form-control input-lg" })
+                    @Html.DropDownList("fkClientId", ViewBag.Client as SelectList, "--Please select--", new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.fkClientId, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-2">
                     @Html.LabelFor(model => model.fkProjectID, htmlAttributes: new { @class = "control-label manadatory" })
-                    @Html.DropDownList("ProjectID", ViewBag.Project as SelectList, "--Please select--", new { @class = "form-control input-lg" })
+                    @Html.DropDownList("fkProjectID", ViewBag.Project as SelectList, "--Please select--", new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.fkProjectID, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-2">
                     @Html.LabelFor(model => model.fkTaskID, htmlAttributes: new { @class = "control-label manadatory" })
-                    @Html.DropDownList("TaskID", ViewBag.Task as SelectList, "--Please select--", new { @class = "form-control input-lg" })
+                    @Html.DropDownList("fkTaskID", ViewBag.Task as SelectList, "--Please select--", new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.fkTaskID, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="col-lg-2">
-                    @Html.LabelFor(model => model.CheckInDateTime, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.CheckInDateTime)
                     @Html.EditorFor(model => model.CheckInDateTime, new { htmlAttributes = new { @class = "form-control" } })
 
                 </div>
@@ -137,20 +137,21 @@
 
         $("#CheckInDate").datepicker
            ({
-               dateFormat: "yy-mm-dd",
-               changeMonth: true,
-               changeYear: true,
-               yearRange: "-100:+100"
+               todayBtn: true,
+               clearBtn: true,
+               calendarWeeks: true,
+               todayHighlight: true,
+               format: "dd/MM/yyyy"
            });
         $("#CheckInDateTime").datetimepicker
            ({
-               format: "dd MM yyyy - hh:ii",
+               format: "dd MM yyyy  hh:ii",
              
            });
 
         $("#CheckOutDatetime").datetimepicker
            ({
-               format: "dd MM yyyy - hh:ii",
+               format: "dd MM yyyy  hh:ii",
                
            });
 
@@ -159,8 +160,8 @@
 
     
    
-    $("#ClientID").change(function () {
-        var clientNo = $("#ClientID").val();
+    $("#fkClientId").change(function () {
+        var clientNo = $("#fkClientId").val();
         if (clientNo == null || clientNo == "") {
             alert("Please Select Client");
             return;
@@ -183,7 +184,7 @@
                     for (i in a) {
                         listItems += "<option value='" + a[i].Value + "'>" + a[i].Text + "</option>";
                     }
-                    $("#ProjectID").html(listItems);
+                    $("#fkProjectID").html(listItems);
                 },
                 error: function () {
                     alert("An error has occured!!!");
@@ -192,8 +193,8 @@
         }
     });
 
-    $("#ProjectID").change(function () {
-        var projectId = $("#ProjectID").val();
+    $("#fkProjectID").change(function () {
+        var projectId = $("#fkProjectID").val();
         if (projectId == null || projectId == "") {
             alert("Please select project");
             return;
@@ -216,7 +217,7 @@
                     for (i in a) {
                         listItems += "<option value='" + a[i].Value + "'>" + a[i].Text + "</option>";
                     }
-                    $("#TaskID").html(listItems);
+                    $("#fkTaskID").html(listItems);
                 },
                 error: function () {
                     alert("An error has occured!!!");
