--- a/PayMe/PayMe/Views/Home/Index.cshtml
+++ b/PayMe/PayMe/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 <em class="fa fa-home"></em>
             </a>
         </li>
-        <li class="active">Dashboard</li>
+        <li class="active">Client Dashboard</li>
     </ol>
 </div><!--/.row-->
 
