--- a/PayMe/PayMe/Views/Home/Index.cshtml
+++ b/PayMe/PayMe/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                 <div class="panel panel-teal panel-widget border-right">
                     <div class="row no-padding">
                         <em class="fa fa-xl fa-shopping-cart color-blue"></em>
-                        <div class="large">120</div>
+                        <div class="large">@ViewBag.ProjectCount</div>
                         <div class="text-muted">Projects</div>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                 <div class="panel panel-blue panel-widget border-right">
                     <div class="row no-padding">
                         <em class="fa fa-xl fa-comments color-orange"></em>
-                        <div class="large">52</div>
+                        <div class="large">@ViewBag.ClientCount</div>
                         <div class="text-muted">Clients</div>
                     </div>
                 </div>
@@ -45,8 +45,8 @@
                 <div class="panel panel-orange panel-widget border-right">
                     <div class="row no-padding">
                         <em class="fa fa-xl fa-users color-teal"></em>
-                        <div class="large">24</div>
-                        <div class="text-muted">Users</div>
+                        <div class="large">@ViewBag.EmployeeCount</div>
+                        <div class="text-muted">Employees</div>
                     </div>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                 <div class="panel panel-red panel-widget ">
                     <div class="row no-padding">
                         <em class="fa fa-xl fa-search color-red"></em>
-                        <div class="large">25.2k</div>
-                        <div class="text-muted">Page Views</div>
+                        <div class="large">@ViewBag.TotalHourIncurrentMonth</div>
+                        <div class="text-muted">Hours Payable -  @ViewBag.CurrentMonth</div>
                     </div>
                 </div>
             </div>
