--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -83,6 +83,7 @@
     <script src="~/Scripts/bootstrap-datepicker.js"></script>
     <script src="~/Scripts/custom.js"></script>    
     <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+    <script src="~/Scripts/PaymeUtil.js"></script>
 
 
 </head>
