--- a/PayMe/PayMe/Views/Project/Index.cshtml
+++ b/PayMe/PayMe/Views/Project/Index.cshtml
@@ -53,6 +53,7 @@
                             <th data-field="ProjectName" data-sortable="true">Project</th>
                             <th data-field="PrimaryContact" data-sortable="true">Primary Contact</th>
                             <th data-field="LocationInfo" data-sortable="true">Location Info</th>
+                            <th data-field="ManagerName" data-sortable="true">Manager</th>
                             <th data-field="IsActive" data-sortable="true" data-formatter="YesNoFormater">Is Active</th>
                             <th data-field="ID" data-sortable="true" data-formatter="ActionEdit">Edit</th>
                         </tr>
