--- a/PayMe/PayMe/css/styles.css
+++ b/PayMe/PayMe/css/styles.css
@@ -79,7 +79,7 @@ input.form-control {
   border: 1px solid #f9243f; }
 
 .navbar-custom {
-  background: #222;
+  background: #0660bc;
   height: 60px; }
 
 .navbar-header .navbar-brand {
@@ -797,7 +797,7 @@ a.label:hover, a.label:focus {
   list-style-type: none; }
 
 .sidebar ul.nav li a {
-  height: 50px;
+  height: 40px;
   font-size: 15px;
   line-height: 2em;
   color: #444444; }
@@ -811,7 +811,9 @@ a.label:hover, a.label:focus {
 .sidebar ul.nav ul.children li a {
   height: 40px;
   background: #f1f4f7;
-  color: #444444; }
+  color: #444444;
+  padding:7px;
+}
 
 .sidebar ul.nav li.current a {
   background-color: #30a5ff;
