--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -200,12 +200,6 @@
     </nav>
     <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
        
-        <div class="divider"></div>
-        @*<form role="search">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-            </div>
-        </form>*@
         <ul class="nav menu">
             <li class='@Html.IsActive("Home", "Index")'><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
            
@@ -214,19 +208,7 @@
             <li class='@Html.IsActive("TimeTracker", "Index")'><a href="~/TimeTracker/Index"><em class="fa fa-clock-o">&nbsp;</em> Time Tracker</a></li>
             <li class='@Html.IsActive("CkeckIn", "Index")'><a href="~/Checkin/Index"><em class="fa fa-clock-o">&nbsp;</em> Check In</a></li>
             <li class='@Html.IsActive("CkeckOut", "Index")'><a href="~/CheckOut/Index"><em class="fa fa-clock-o">&nbsp;</em> Check Out</a></li>
-       
-            @*<li class='@Html.IsActive("EmployeeProject", "Index")'>
-                <a data-toggle="collapse" href="#sub-item-5">
-                    <em class="fa fa-desktop">&nbsp;</em> Management <span data-toggle="collapse" href="#sub-item-5" class="icon pull-right"><em class="fa fa-plus"></em></span>
-                </a>
-                <ul class="children collapse" id="sub-item-5">
-                    <li>
-                        <a class="" href="~/EmployeeProject/Index">
-                            <span class="fa fa-arrow-right">&nbsp;</span> Assign Employee to Project
-                        </a>
-                    </li>                   
-                </ul>
-            </li>*@
+
             <li class='@Html.IsActive("EmployeeProject", "Index")'>
                 <a data-toggle="" href="#sub-item-2">
                     <em class="fa fa-bank">&nbsp;</em>Account Settings @*<span data-toggle="collapse" href="#sub-item-2" class="icon pull-right"><em class="fa fa-plus"></em></span>*@
@@ -239,8 +221,7 @@
 
                     <li>
                         <a class="" href="~/EmployeeProject/Index">
-                            <span class="fa fa-plug">&nbsp;</span> Assign Employee to Project
-                        </a>
+                            <span class="fa fa-plug">&nbsp;</span> Assign Employee to Project</a>
                     </li> 
                 </ul>
             </li>
@@ -267,13 +248,11 @@
                     </li>
                 </ul>
             </li>
-            @*<li><a href="#"><em class="fa fa-bar-chart">&nbsp;</em> Reports</a></li>*@
+           
             <li><a href="~/Login/Logout"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
         </ul>
         <div class="profile-sidebar">
-            @*<div class="profile-userpic">
-                <img src="~/Images/UserIcon.png" class="img-responsive" alt="">
-            </div>*@
+           
             <div class="profile-usertitle">
                 <div class="profile-usertitle-name">@Session["FullName"]</div>
                 <div class="profile-usertitle-status"><span class="indicator label-success"></span>Online</div>
